# algebraic-optics

./: .gitignore  ChangeLog.md  LICENSE  README.md  algebraic-optics.cabal
.circleci/: config.yml
src/Algebraic/: Optics.hs
src/Algebraic/Optics/: At.hs  Cons.hs  Conversion.hs  Each.hs  Empty.hs  Equality.hs  Fold.hs  Getter.hs  Iso.hs  Lens.hs  Prism.hs  Review.hs  Setter.hs  Traversal.hs  Tuple.hs  Type.hs
src/Algebraic/Optics/Internal/: Indexed.hs  Monoid1.hs  Types.hs
test/: Test.hs
