name:                algebraic-optics
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       1.12

library
  exposed-modules:     Algebraic.Optics
                       Algebraic.Optics.At  
                       Algebraic.Optics.Cons  
                       Algebraic.Optics.Conversion  
                       Algebraic.Optics.Each  
                       Algebraic.Optics.Equality  
                       Algebraic.Optics.Empty  
                       Algebraic.Optics.Fold      
                       Algebraic.Optics.Getter    
                       Algebraic.Optics.Iso  
                       Algebraic.Optics.Lens      
                       Algebraic.Optics.Prism     
                       Algebraic.Optics.Setter    
                       Algebraic.Optics.Traversal 
                       Algebraic.Optics.Tuple 
                       Algebraic.Optics.Type      
                       Algebraic.Optics.Internal.Indexed
  build-depends:       base >=4.11
                     , mtl
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror -Wno-name-shadowing -Wno-orphans
  default-language:    Haskell2010
  default-extensions:  RankNTypes
                       FlexibleInstances
                       TypeOperators
                       MultiParamTypeClasses
                       ScopedTypeVariables
                       LambdaCase
                       GADTs
                       DataKinds
                       FlexibleContexts
                       BangPatterns
                       FunctionalDependencies
                       UndecidableInstances
                       StandaloneDeriving
                       TypeFamilies
                       DefaultSignatures
                       GeneralizedNewtypeDeriving
                       RecursiveDo
                       TupleSections

test-suite unit-tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base >=4.11
                     , algebraic-optics
                     , tasty < 1.2
                     , tasty-hunit
  hs-source-dirs:      test
  ghc-options:         -Wall -Werror -Wno-name-shadowing
  default-language:    Haskell2010
  default-extensions:  RankNTypes
                       FlexibleContexts
                       ExistentialQuantification
                       RecordWildCards
                       NamedFieldPuns